--- a/css/OG.css
+++ b/css/OG.css
@@ -314,30 +314,19 @@ footer span {
   color: #e31b23;
 }
 
+/*@media screen and (max-width: 500px) {
+  body {
+    font-size: 14px;
+  }
+
+  .skiing {
+    right: 20px;
+    max-width: 100px;
+  }*/
 }body, html {
   height: 100%;
 }
 
-input[type=text], select, textarea {
-  width: 100%;
-  padding: 12px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-  margin-top: 6px;
-  margin-bottom: 16px;
-  resize: vertical;
-}
-
-input[type=submit] {
-  background-color: #4CAF50;
-  color: white;
-  padding: 12px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-input[type=submit]:hover {
-  background-color: #45a049;
+body{
+  font-family: 'Noto Serif', serif;
 }
